--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_HOST=mydb-instance.xxxxxxxx.us-east-1.rds.amazonaws.com
+DB_HOST=bitcot.c18ya6acax9t.eu-north-1.rds.amazonaws.com
 DB_USER=admin
-DB_PASS=yourpassword
-DB_NAME=mydatabase
+DB_PASS=Asdflkjh123
+DB_NAME=Bitcot
